# electronic_retail_chain

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
products/: models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
retail_chain/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
retail_chain/migrations/: 0001_initial.py  0002_chainnode_node_level_chainnode_node_type.py  0003_alter_chainnode_contacts.py  0004_alter_chainnode_payment_arrears_and_more.py  0005_alter_chainnode_products.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
